Initial implementation to support multiple parameters